tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_then_dequantizeLinear_with_different_float32_scale_and_int8_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js quantizeLinear then dequantizeLinear with different float32 scale and int8 zeroPoint, trtx
 Failed to build graph: Runtime error: Failed to build serialized network

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[2];
  }

  consts {
    operand_0: f32[2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);
    operand_1: i8[2] @bytes([35, 232]);
    operand_3: f32[2] @bytes([160, 82, 246, 61, 75, 217, 163, 63]);
    operand_4: i8[2] @bytes([12, 235]);
  }

  nodes {
    [operand_5] = quantizeLinear(quantizeLinearInput, operand_3, operand_4, label="");
    [dequantizeLinearOutput] = dequantizeLinear(operand_5, operand_0, operand_1, label="");
  }

  outputs { dequantizeLinearOutput; }
}
