tests/snapshots/run_wpt_conformance__trtx_quantized_argMax.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized argMax",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    input: f32[2, 3];\n  }\n\n  consts {\n    operand_0: f32[1, 1] @bytes([224, 169, 175, 62]);\n    operand_1: i8[1] @bytes([128]);\n    operand_3: i8[1, 1] @bytes([128]);\n    operand_4: f32[1] @bytes([224, 169, 175, 62]);\n  }\n\n  nodes {\n    [operand_5] = quantizeLinear(input, operand_0, operand_3, label=\"\");\n    [operand_6] = dequantizeLinear(operand_5, operand_0, operand_3, label=\"\");\n    [output] = argMax(operand_6, keepDimensions=false, label=\"\", outputDataType=\"int32\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
