tests/snapshots/run_wpt_conformance__trtx_quantized_clamp.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized clamp, trtx
 Failed to build graph: graph conversion failed for trtx: clamp: input dimensions: Could not get dimensions from Tensor "(Unnamed Layer* 27) [ElementWise]_output"

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[2, 3];
  }

  consts {
    operand_1: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_2: i8[1, 1] @bytes([0]);
  }

  nodes {
    [operand_3] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_4] = dequantizeLinear(operand_3, operand_1, operand_2, label="");
    [operand_5] = clamp(operand_4, label="", maxValue=6, minValue=0);
    [operand_6] = quantizeLinear(operand_5, operand_1, operand_2, label="");
    [output] = dequantizeLinear(operand_6, operand_1, operand_2, label="");
  }

  outputs { output; }
}
