tests/snapshots/run_wpt_conformance__trtx_quantized_clamp_with_emulation.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized clamp with emulation, trtx
 qdq_subgraph :: quantized clamp with emulation: index 0: actual=0 expected=7.891137 ulp=1090290738 tolerance=16
  inputs: input: [8.413617134094238, 6.108623504638672, 3.549168109893799, 1.6811466217041016, -0.1988269537687301, -8.413617134094238]; scale: [0.343092918395996] (constant); zeroPoint: [0] (constant)
  expected output: [7.891137, 6.1756725, 3.4309292, 1.7154646, -0.34309292, -7.891137]
  actual output: [0, 0, 0, 0, 0, 0]
  expected output full nd:
(shape [2, 3])
  [7.891137, 6.1756725, 3.4309292]
  [1.7154646, -0.34309292, -7.891137]
  actual output full nd:
(shape [2, 3])
  [0, 0, 0]
  [0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[2, 3];
  }

  consts {
    operand_1: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_2: i8[1, 1] @bytes([0]);
  }

  nodes {
    [operand_3] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_4] = dequantizeLinear(operand_3, operand_1, operand_2, label="");
    [operand_5] = clamp(operand_4, label="", maxValue=8, minValue=-8);
    [operand_6] = quantizeLinear(operand_5, operand_1, operand_2, label="");
    [output] = dequantizeLinear(operand_6, operand_1, operand_2, label="");
  }

  outputs { output; }
}
