tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_binary_add.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized element-wise binary add, trtx
 Failed to convert graph: graph conversion failed for trtx: Failed to get dimensions for tensor 0 in add: Could not get dimensions from Tensor "(Unnamed Layer* 33) [Identity]_output"

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[1, 1, 2, 3];
  }

  consts {
    operand_1: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
    operand_2: i8[1, 1, 1, 1] @bytes([128]);
    operand_3: i8[1, 1, 2, 3] @bytes([2, 7, 8, 11, 5, 23]);
    operand_4: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
    operand_5: i8[1, 1, 1, 1] @bytes([128]);
    operand_6: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);
    operand_7: i8[1, 1, 1, 1] @bytes([128]);
  }

  nodes {
    [operand_8] = quantizeLinear(inputA, operand_1, operand_2, label="");
    [operand_9] = dequantizeLinear(operand_8, operand_1, operand_2, label="");
    [operand_10] = dequantizeLinear(operand_3, operand_4, operand_5, label="");
    [operand_11] = add(operand_9, operand_10, label="");
    [operand_12] = quantizeLinear(operand_11, operand_6, operand_7, label="");
    [output] = dequantizeLinear(operand_12, operand_6, operand_7, label="");
  }

  outputs { output; }
}
